--- a/styles/global.css
+++ b/styles/global.css
@@ -35,6 +35,23 @@ main {
     padding: 20px;
 }
 
+.song-list-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    text-align: center;
+}
+
 .song-card {
-    
+    background-color: white;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: hotpink;
+    border-width: 3px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
